--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,32 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+<ion-content>
+
+  <div class="controls-container">
+    <ion-toolbar class="home-navbar" color="transparent">
+
+      <ion-buttons slot="start">
+          <ion-menu-toggle>
+            <ion-menu-button color="dark"></ion-menu-button>
+          </ion-menu-toggle>
+        </ion-buttons>
+
+      <ion-buttons slot="end">
+        <ion-button color="dark" (click)="toggleMapMode()">
+          <ion-icon slot="start" [name]="mapLayerActive ? 'list' : 'pin'"></ion-icon>
+          {{ mapLayerActive ? 'List' : 'Map' }}
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </div>
+
+  <div class="search-results" *ngIf="searchResults.length"
+    (click)="toggleMapMode()"
+    [ngClass]="{ 'map-active': mapLayerActive }"
+    [@mapAnimation]="mapLayerActive ? 'map' : 'list'">
+    <app-appointment-summary-list-item *ngFor="let searchResult of searchResults"
+      [appointmentSummary]="searchResult">
+    </app-appointment-summary-list-item>
+  </div>
 </ion-content>
